--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
     background-color: rgb(1, 115, 168);
     width: 100%;
-    height: 1000px;
     overflow-x: hidden;
 }
 :root{
@@ -24,7 +23,7 @@ header h1 {
     position: relative;
     margin: auto;
     width: 600px;
-    height: 900px;
+    height: 1000px;
     border-radius: 20px;
     border: 1px solid blanchedalmond;
     background: linear-gradient(180deg, rgb(44, 151, 201), rgb(255, 243, 243) 90%);
@@ -72,25 +71,26 @@ header h1 {
 
 /* Start Image Css */
 .image {
-    position: absolute;
+    position: relative;
     width: 100%;
-    height: 60%;
+    height: 700px;
     top: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+
 }
 
 /* Start image Logo */
 .imgLogo {
-    height: 20%;
+    height: 140px;
     padding-right: 40px;
     margin-top: 20px;
 }
 
 .imgLogo img {
-    height: 95%;
+    height: 100%;
 }
 
 /* End image Logo */
@@ -100,7 +100,7 @@ header h1 {
 /* Start image wrapper */
 .imgWrapper {
     position: relative;
-    height: 50%;
+    height: 420px;
     width: 100%;
     margin-top: 20px;
 
@@ -108,8 +108,8 @@ header h1 {
 
 .imgWrapperAni {
     position: relative;
-    height: 100%;
-    width: 50%;
+    height: 350px;
+    width: 350px;
     margin: 0 auto;
     background: rgb(255, 255, 255);
     overflow: hidden;
@@ -188,7 +188,7 @@ header h1 {
 /* Start Name Css */
 .imgName {
     position: relative;
-    height: 20%;
+    height: 140px;
     width: 100%;
     margin-top: 20px;
     text-align: center;
@@ -210,21 +210,21 @@ header h1 {
 /* Start Information css */
 .detail {
     position: absolute;
-    height: 40%;
+    height: 300px;
     width: 85%;
     bottom: 0;
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
+
 }
 
 .detailInfor{
     font-size: 12px;
     line-height: 1;
-    padding-top: 30px;
 }
 
 .detailContact{
-    padding-top: 8px;
+    padding-top: 10px;
 }
 .detailContactWrapper{
 background: #1da7fc86;
