--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: rgb(1, 115, 168);
     width: 100%;
+    height: 1200px;
     overflow-x: hidden;
 }
 :root{
@@ -20,9 +21,10 @@ header h1 {
 
 /* Start animatin for cardWrapper */
 .cardWrapper {
+
     position: relative;
     margin: auto;
-    width: 600px;
+    width: 700px;
     height: 1000px;
     border-radius: 20px;
     border: 1px solid blanchedalmond;
@@ -79,12 +81,11 @@ header h1 {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-
 }
 
 /* Start image Logo */
 .imgLogo {
-    height: 140px;
+    height: 100px;
     padding-right: 40px;
     margin-top: 20px;
 }
@@ -100,16 +101,16 @@ header h1 {
 /* Start image wrapper */
 .imgWrapper {
     position: relative;
-    height: 420px;
+    height: 450px;
     width: 100%;
-    margin-top: 20px;
+    padding-top: 30px;
 
 }
 
 .imgWrapperAni {
     position: relative;
-    height: 350px;
-    width: 350px;
+    height: 380px;
+    width: 380px;
     margin: 0 auto;
     background: rgb(255, 255, 255);
     overflow: hidden;
@@ -188,9 +189,8 @@ header h1 {
 /* Start Name Css */
 .imgName {
     position: relative;
-    height: 140px;
+    height: 150px;
     width: 100%;
-    margin-top: 20px;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
   
