--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     background: linear-gradient(180deg, rgb(1, 115, 168,0.9), rgb(255, 243, 243,0.1) 100%);
     width: 100%;
-    height: 1200px;
+    height: 100vh;
     overflow-x: hidden;
 
 }
