--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ Start Styling for the Heading */
 header h1 {
     color: rgb(154, 213, 240);
     text-align: center;
-    font-size: 5vh;
+    font-size: 50px;
 }
 
 /* Start Styling for the Heading */
@@ -26,7 +26,7 @@ header h1 {
     position: relative;
     margin: auto;
     width: 700px;
-    height: 1000px;
+    height: 80%;
     border-radius: 20px;
     border: 1px solid blanchedalmond;
     background: linear-gradient(180deg, rgb(44, 151, 201), rgb(255, 243, 243) 90%);
@@ -76,7 +76,7 @@ header h1 {
 .image {
     position: relative;
     width: 100%;
-    height: 700px;
+    height: 70%;
     top: 0;
     display: flex;
     align-items: center;
@@ -211,7 +211,7 @@ header h1 {
 /* Start Information css */
 .detail {
     position: absolute;
-    height: 300px;
+    height: 30%;
     width: 85%;
     bottom: 0;
     font-family: 'Times New Roman', Times, serif;
