--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ Start Styling for the Heading */
 header h1 {
     color: rgb(154, 213, 240);
     text-align: center;
-    font-size: 50px;
+    font-size: 5vh;
 }
 
 /* Start Styling for the Heading */
@@ -26,7 +26,7 @@ header h1 {
     position: relative;
     margin: auto;
     width: 700px;
-    height: 80%;
+    height: 1000px;
     border-radius: 20px;
     border: 1px solid blanchedalmond;
     background: linear-gradient(180deg, rgb(44, 151, 201), rgb(255, 243, 243) 90%);
@@ -67,28 +67,18 @@ header h1 {
     position: absolute;
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
     height: 100%;
     width: 100%;
-
 }
 
 /* Start Image Css */
-.image {
-    position: relative;
-    width: 100%;
-    height: 70%;
-    top: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
 
 /* Start image Logo */
 .imgLogo {
-    height: 100px;
-    padding-right: 40px;
-    margin-top: 20px;
+    height: 10%;
+    padding: 10px 40px 0 0;
 }
 
 .imgLogo img {
@@ -101,21 +91,19 @@ header h1 {
 
 /* Start image wrapper */
 .imgWrapper {
-    position: relative;
-    height: 450px;
+    height: 40%;
     width: 100%;
-    padding-top: 30px;
 
 }
 
 .imgWrapperAni {
     position: relative;
-    height: 380px;
-    width: 380px;
-    margin: 0 auto;
+    height: 350px;
+    width: 350px;
+    margin: 2% auto;
     background: rgb(255, 255, 255);
     overflow: hidden;
-    animation: avaAni 6s 2s linear infinite ;
+    animation: avaAni 8s 2s linear infinite ;
 }
 
 @keyframes avaAni{
@@ -129,7 +117,7 @@ header h1 {
         border-radius: var(--imageBorder2);
     }
     75%{
-        border-radius: var(--imageBorder2);
+        border-radius: var(--imageBorder);
     }
     100%{
         border-radius: var(--imageBorder);
@@ -149,7 +137,9 @@ header h1 {
     0% {
         transform: rotate(0deg);
     }
-
+    50% {
+        transform: rotate(-180deg);
+    }
     100% {
         transform: rotate(360deg);
     }
@@ -160,7 +150,7 @@ header h1 {
     position: absolute;
     inset: 4px;
     background: rgb(87, 168, 206);
-    animation: avaAni 6s 2s linear infinite ;
+    animation: avaAni 8s 2s linear infinite ;
     z-index: 1;
 }
 
@@ -169,7 +159,7 @@ header h1 {
     inset: 16px;
     border: 4px solid white;
     z-index: 2;
-    animation: avaAni 6s 2s linear infinite ;
+    animation: avaAni 8s 2s linear infinite ;
 
 }
 
@@ -181,7 +171,7 @@ header h1 {
     height: 100%;
     object-fit: cover;
     pointer-events: none;
-    animation: avaAni 6s 2s linear infinite ;
+    animation: avaAni 8s 2s linear infinite ;
 }
 
 /* End image wrapper */
@@ -189,50 +179,50 @@ header h1 {
 
 /* Start Name Css */
 .imgName {
-    position: relative;
-    height: 150px;
+    height: 15%;
     width: 100%;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
-  
+
 }
 
 .imgName span {
     font-size: 60px;
-    margin-left: 10px;
+
 }
-.imgName h1{
-    line-height: 0.01;
-    font-size: 30px;
+ .mark {
+    text-decoration: 2px underline wavy rgb(189, 199, 255);
+}
+.imgName h2{
+    font-size: 25px;
+
+    line-height: 1px;
 }
 /* End Name Css */
 /* End Image Css */
 
 /* Start Information css */
-.detail {
-    position: absolute;
-    height: 30%;
-    width: 85%;
-    bottom: 0;
-    font-family: 'Times New Roman', Times, serif;
+
+.detailInfor{
+    height: 20%;
+    font-size: 15px;
+    line-height: 1;
     text-align: center;
 
 }
 
-.detailInfor{
-    font-size: 12px;
-    line-height: 1;
-}
-
 .detailContact{
-    padding-top: 10px;
+    width: 100%;
+    height: 15%;
+
+    text-align: center;
 }
 .detailContactWrapper{
 background: #1da7fc86;
 border-radius: 20px;
 height: 40px;
 margin: auto;
-width: 80%;
+width: 70%;
 box-shadow: 2px 2px 2px black;
 }
 
